# verticat

./: .gitignore  Cargo.toml  LICENSE  README.md  avtr.txt  go.mod  main.go  reo1.txt  reo2.txt
.github/workflows/: release.yml
lib/: column_definitions.go  column_definitions_test.go  lib.go  lib_test.go
scripts/: generate-binary-name
src/: column_definitions.rs  column_type.rs  column_types.rs  file_signature.rs  lib.rs  main.rs  vertica_native_file.rs
test-data/: sample
